--- a/Services/neon-identity-service/neon-identity-service.csproj
+++ b/Services/neon-identity-service/neon-identity-service.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>neon-identity-service</AssemblyName>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <LangVersion>latest</LangVersion>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
