--- a/Test/Test.Neon.YugaByte/Test.Neon.YugaByte.csproj
+++ b/Test/Test.Neon.YugaByte/Test.Neon.YugaByte.csproj
@@ -6,7 +6,7 @@
     <LangVersion>latest</LangVersion>
     <RootNamespace>TestYugaByte</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
