--- a/Lib/Neon.Kube.Models/Neon.Kube.Models.csproj
+++ b/Lib/Neon.Kube.Models/Neon.Kube.Models.csproj
@@ -26,7 +26,7 @@
     <PackageTags></PackageTags>
     <NoDefaultExcludes>true</NoDefaultExcludes>
     <PackageIconUrl />
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
