--- a/Lib/Neon.Kube/Resources/Helm/redis-ha/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/redis-ha/values.yaml
@@ -235,7 +235,8 @@ redis:
   lifecycle: {}
 
   ## annotations for the redis statefulset
-  annotations: {}
+  annotations:
+    reloader.stakater.com/auto: "true"
 
 ## Sentinel specific configuration options
 sentinel:
