--- a/Lib/Neon.Kube/Resources/Helm/loki/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/loki/values.yaml
@@ -93,7 +93,7 @@ config:
       shared_store: s3
     aws:
       bucketnames: loki
-      endpoint: minio.neon-system:9000
+      endpoint: minio.neon-system
       access_key_id: ${ACCESS_KEY_ID}
       secret_access_key: ${SECRET_ACCESS_KEY}
       insecure: true
