--- a/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
@@ -4,7 +4,7 @@ operator:
   clusterDomain: ""
   nsToWatch: ""
   image:
-    organization: neon-registry.node.local
+    organization: ghcr.io/neonrelease-dev
     repository: minio-operator
     tag: v4.1.2
     pullPolicy: IfNotPresent
@@ -26,7 +26,7 @@ operator:
 
 console:
   image:
-    organization: neon-registry.node.local
+    organization: ghcr.io/neonrelease-dev
     repository: minio-console
     tag: v0.7.4
     pullPolicy: IfNotPresent
@@ -50,7 +50,7 @@ tenants:
   - name: minio
     ## Registry location and Tag to download MinIO Server image
     image:
-      organization: neon-registry.node.local
+      organization: ghcr.io/neonrelease-dev
       repository: minio-minio
       tag: RELEASE.2021-06-17T00-10-46Z
       pullPolicy: IfNotPresent
