--- a/Services/neon-setup-grafana/neon-setup-grafana.csproj
+++ b/Services/neon-setup-grafana/neon-setup-grafana.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Minio" Version="3.1.13" />
     <PackageReference Include="Npgsql" Version="5.0.5" />
   </ItemGroup>
 
